[gd_scene load_steps=17 format=3 uid="uid://cgkrgp6yhbgos"]

[ext_resource type="Script" path="res://Scripts/settings_menu.gd" id="1_w1jop"]
[ext_resource type="FontFile" uid="uid://iswb6pwnyrki" path="res://Assets/Xolonium-Regular.ttf" id="2_1ad6o"]
[ext_resource type="Texture2D" uid="uid://c6y2pnsy8rvas" path="res://Assets/Icons/sound_icon.png" id="3_b85cl"]
[ext_resource type="Texture2D" uid="uid://djewva2uum3o7" path="res://Assets/Icons/music_icon.png" id="4_t0jvl"]
[ext_resource type="Texture2D" uid="uid://copbogcxe3y8u" path="res://Assets/Icons/back_icon.png" id="5_ln2dl"]
[ext_resource type="PackedScene" path="res://Scenes/click_sound.tscn" id="6_ig5ds"]

[sub_resource type="Gradient" id="Gradient_6y3a3"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_s6b5q"]
gradient = SubResource("Gradient_6y3a3")
width = 10
height = 35

[sub_resource type="Gradient" id="Gradient_83oqp"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0.7606, 0.87476, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_34n41"]
gradient = SubResource("Gradient_83oqp")
width = 10
height = 35

[sub_resource type="StyleBoxLine" id="StyleBoxLine_utmkn"]
color = Color(0, 0, 0, 0.388235)
thickness = 30

[sub_resource type="StyleBoxLine" id="StyleBoxLine_k1xrn"]
color = Color(0.505882, 0.505882, 0.505882, 1)
thickness = 30

[sub_resource type="StyleBoxLine" id="StyleBoxLine_c711l"]
color = Color(0.721569, 0.517647, 0.117647, 1)
thickness = 30

[sub_resource type="Animation" id="Animation_2vbun"]
resource_name = "appear"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/BackButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_pyel1"]
resource_name = "fade"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/VBoxContainer/MasterLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/VBoxContainer/MasterSlider:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/VBoxContainer/SFXLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/VBoxContainer/SFXSlider:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/VBoxContainer/MusicLabel:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/VBoxContainer/MusicSlider:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/VBoxContainer/HBoxContainer/SoundButton:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CanvasLayer/VBoxContainer/HBoxContainer/MusicButton:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CanvasLayer/BackButton:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1tbnm"]
_data = {
"appear": SubResource("Animation_2vbun"),
"fade": SubResource("Animation_pyel1")
}

[node name="SettingsMenu" type="Node2D" groups=["menus"]]
script = ExtResource("1_w1jop")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -176.0
offset_top = 128.0
offset_right = 176.0
offset_bottom = 624.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="MasterLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1ad6o")
theme_override_font_sizes/font_size = 30
text = "Master Volume"
horizontal_alignment = 1

[node name="MasterSlider" type="HSlider" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_icons/grabber = SubResource("GradientTexture2D_s6b5q")
theme_override_icons/grabber_highlight = SubResource("GradientTexture2D_34n41")
theme_override_styles/slider = SubResource("StyleBoxLine_utmkn")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_k1xrn")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_c711l")
max_value = 1.0
step = 0.01
value = 0.5

[node name="SFXLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1ad6o")
theme_override_font_sizes/font_size = 30
text = "SFX Volume"
horizontal_alignment = 1

[node name="SFXSlider" type="HSlider" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_icons/grabber = SubResource("GradientTexture2D_s6b5q")
theme_override_icons/grabber_highlight = SubResource("GradientTexture2D_34n41")
theme_override_styles/slider = SubResource("StyleBoxLine_utmkn")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_k1xrn")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_c711l")
max_value = 1.0
step = 0.01
value = 0.5

[node name="MusicLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1ad6o")
theme_override_font_sizes/font_size = 30
text = "Music Volume"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_icons/grabber = SubResource("GradientTexture2D_s6b5q")
theme_override_icons/grabber_highlight = SubResource("GradientTexture2D_34n41")
theme_override_styles/slider = SubResource("StyleBoxLine_utmkn")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_k1xrn")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_c711l")
max_value = 1.0
step = 0.01
value = 0.5

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="SoundButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
icon = ExtResource("3_b85cl")
icon_alignment = 1
expand_icon = true

[node name="MusicButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 8
icon = ExtResource("4_t0jvl")
expand_icon = true

[node name="BackButton" type="Button" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
offset_left = 24.0
offset_top = 40.0
offset_right = 88.0
offset_bottom = 104.0
icon = ExtResource("5_ln2dl")
expand_icon = true

[node name="ClickSound" parent="." instance=ExtResource("6_ig5ds")]
volume_db = -26.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1tbnm")
}

[connection signal="value_changed" from="CanvasLayer/VBoxContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/VBoxContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/SoundButton" to="." method="_on_sound_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/MusicButton" to="." method="_on_music_button_pressed"]
[connection signal="pressed" from="CanvasLayer/BackButton" to="." method="_on_back_button_pressed"]
